# Servo

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_env.py  middleware.ts  package-lock.json  package.json  pyproject.toml
SDK/: .gitignore  README.md
SDK/Demo Test/: Demo.py
SDK/NPM SDK/: .gitignore  .npmignore  README.md  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
SDK/NPM SDK Test/: .gitignore  package.json  test.js  test.ts  tsconfig.json
SDK/Python SDK/: .gitignore  README.md  demo.py  pyproject.toml
SDK/Python SDK Test/: .gitignore  README.md  demo_actual_user.py  requirements.txt  test_basic.py  test_conversation.py  try_servo.py
SDK/Python SDK/examples/: basic.py  demo_user_flow.py
SDK/Python SDK/servo_sdk/: __init__.py  _http.py  client.py  context.py  errors.py  types.py
SDK/Python SDK/tests/: test_client.py  test_context_db.py  test_decompose.py  test_e2e.py  test_integration.py
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/documentation/: page.tsx
components/: api-keys-page.tsx  billing-page.tsx  dashboard-content.tsx  dashboard-overview.tsx  execution-logs-page.tsx  routing-page.tsx  settings-page.tsx  sidebar.tsx
components/nodes/: classifier-node.tsx  tier-node.tsx
components/ui/: dialog.tsx  select.tsx
docs/plans/: 2026-03-04-clerk-auth-design.md  2026-03-04-clerk-auth.md  2026-03-04-routing-tab-design.md  RouteAndExecute.md  (+3 more)
inference/: README.md  __init__.py  api.py  check_gpu.py  config.yaml  requirements.txt  server.py
lib/: execution-log-aggregates.ts  supabase.ts
(+45 files in other folders)
